# text-to-rdf

./: .env.example  .env.ollama  .env.optimized  .gitignore  Cargo.toml  README.md  TESTING.md  context.jsonld
.cargo/: config.toml
.github/: copilot-instructions.md
docs/: COREFERENCE_RESOLUTION.md  DOCRED_IMPROVEMENT_PLAN.md  HYBRID_PIPELINE.md  PHASE1_IMPLEMENTATION.md  PHASE3_COMPLETION_REPORT.md  PHASE4_COMPLETION_REPORT.md  ROADMAP_TO_70_F1.md
examples/: ENTITY_LINKING.md  basic_extraction.rs  docred_evaluation.rs  pipeline_demo.rs  programmatic_config.rs  test_entity_consistency.rs  test_wikipedia_chunking.rs  webnlg_evaluation.rs
scripts/: create_long_test_doc.py  fetch_docred.py
src/: chunking.rs  coref.rs  coreference.rs  entity_linker.rs  error.rs  extractor.rs  gliner_extractor.rs  knowledge_buffer.rs  lib.rs  normalize.rs  types.rs  validation.rs
tests/: integration_tests.rs
tests/fixtures/: docred_sample.json  test_cases.json  wikipedia_marie_curie.txt  wikipedia_pierre_curie.txt
