[package]
name = "text-to-rdf"
version = "0.1.0"
edition = "2021"

[dependencies]
genai = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
dotenvy = "0.15"
slug = "0.1"
rust-stemmers = "1.2"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
cached = { version = "0.53", features = ["async"] }
oxigraph = "0.4"
strsim = "0.11"  # Fuzzy string matching for entity disambiguation

# GLiNER zero-shot NER (optional feature)
gline-rs = { version = "1.0", optional = true }
orp = { version = "0.9", optional = true }
num_cpus = { version = "1.16", optional = true }

[features]
default = []
gliner = ["gline-rs", "orp", "num_cpus"]

[lints.clippy]
pedantic = "warn"

[dev-dependencies]
anyhow = "1"
ureq = "2.10"
