[package]
name = "text-to-rdf"
version = "0.1.0"
edition = "2021"

[dependencies]
genai = "0.5.3"
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
async-trait = "0.1.89"
dotenvy = "0.15.7"
slug = "0.1.6"
rust-stemmers = "1.2.0"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5.8"
cached = { version = "0.56", features = ["async"] }
oxigraph = "0.5.4"
strsim = "0.11.1"  # Fuzzy string matching for entity disambiguation

# GLiNER zero-shot NER (optional feature)
gline-rs = { version = "1.0.1", optional = true }
orp = { version = "0.9.2", optional = true }
num_cpus = { version = "1.17", optional = true }

[features]
default = []
gliner = ["gline-rs", "orp", "num_cpus"]

[lints.clippy]
pedantic = "warn"

[dev-dependencies]
anyhow = "1.0.101"
ureq = "2.10"  # Keep 2.x for stable API
